fixed the padding and the margins on smallbox under the top image.

--- a/css/index.css
+++ b/css/index.css
@@ -198,7 +198,10 @@ header .header-topBox .navBar nav a {
 }
 .underBox img {
   width: 100%;
-  margin-bottom: 3.8%;
+}
+.underBox .smallbox {
+  padding-top: 3%;
+  margin-bottom: 1%;
 }
 .footer {
   width: 100%;
