--- a/less/navigation.less
+++ b/less/navigation.less
@@ -41,10 +41,13 @@ header {
 
         img {
             width:100%;
-            margin-bottom:3.8%;
+            // margin-bottom:3.8%;
+        }//closes the image
+        .smallbox {
+            padding-top:3%;
+            margin-bottom: 1%;
         }
 
-
-    }
+    }// closes the underBox
 
 
